--- a/01_agama/ekottarika/08/EA_08_01.md
+++ b/01_agama/ekottarika/08/EA_08_01.md
@@ -1,55 +1,68 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 8. Asura | 1. Asura'
+title: 'The Numerical Discourses | Chapter 8: Asura | 1. Asura'
 type: kramdown
 base: ../../../
 previous: ../03/EA_03_10.html
 next: EA_08_02.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 8: Asura
-### 1. Asura
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 8: Asura</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一) 須倫</th>
+  <th class='en'>1. Asura</th>
+  <tr>
+    <td class='ch' title='T125.2.560c6'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.560c7'>爾時，世尊告諸比丘： 「受形大者，莫過阿須倫王。 比丘，當知阿須倫形廣長八萬四千由延，口縱廣千由旬。 比丘，當知或有是時，阿須倫王欲觸犯日時。 倍復化身十六萬八千由旬，往日、月前。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Of those who get forms that are large, none surpass the <em>asura</em> king. Monks, you should know, that <em>asura</em>’s form is 84,000 <em>yojana</em>s long, with a mouth that’s a thousand <em>yojana</em>s across.<sup id="ref2"><a href="#n2">2</a></sup> Monks, you should know that there are times when the <em>asura</em> king wants to encroach on the sun. He doubles his body to 168,000 <em>yojana</em>s and moves in front of the sun and moon.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.560c11'>「日、月王見已，各懷恐怖，不寧本處。 所以然者？ 阿須倫形甚可畏故，彼日、月王以懷恐懼，不復有光明。</td>
+    <td id='p3'>3. “When they see him, the kings of the sun and moon both feel frightened and insecure in their own places. For what reason? Because the <em>asura</em> king has a terrible form, the kings of the sun and moon stop shining out of fear.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.560c13'>「然，阿須倫不敢前捉日、月。 何以故？ 日、月威徳，有大神力、壽命極長、顏色端正，受樂無窮。 欲知壽命長短者，住壽一劫。 復，是此間眾生福祐令日、月王。 不爲阿須倫所見觸惱，爾時阿須倫便懷愁憂，即於彼沒。</td>
+    <td id='p4'>4. “But the <em>asura</em> king doesn’t dare grab the sun or moon. Why is that? The sun and moon are majestic, possess great miraculous powers, have very long life spans, are handsome in appearance, and enjoy pleasures without end. For those who want to know the length of their life spans: They live for one eon. Again, sentient beings who create good fortunes here become the kings of the sun and moon. They cannot be attacked by that <em>asura</em>, but the <em>asura</em> does make them feel distressed at that point, and then they disappear.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.560c18'>「如是，諸比丘，弊魔波旬恒在汝後，求其方便壞敗善根。 波旬便化極妙、奇異色、聲、香、味、細滑之法，欲迷亂諸比丘意。 波旬作是念： 『我當會遇得比丘眼便…亦當得耳…鼻…口…身…意之便。』</td>
+    <td id='p5'>5. “In this way, monks, that deceitful Māra the Wicked One is forever after you, searching for a way to destroy your roots of goodness. The Wicked One conjures things with marvelous and unusual sights, sounds, odors, flavors, and touches, wanting to confuse the thinking of monks. The Wicked One thinks, ‘I’ll confront him and get an advantage over that monk’s eyes … get an advantage over that monk’s ears … nose … tongue … body … mind.’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.560c22'>「爾時，比丘雖見極妙六情之法，心不染著。 爾時，弊魔波旬便懷愁憂，即退而去。 所以然者？ 多薩阿竭、阿羅呵威力所致。 何以故？ 諸比丘不近色、聲、香、味、細滑法。</td>
+    <td id='p6'>6. “Although a monk sees these marvelous things of the six senses, his mind isn’t defiled by them. Deceitful Māra the Wicked One then feels distressed, retreats, and goes away. What’s the reason? It’s the work of the Tathāgata’s, the Arhat’s, majestic power. And why? Monks won’t go near sights, sounds, odors, flavors, and touches.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.560c26'>「爾時，比丘恒作是學，受人信施極爲甚難。 不可消化墮墜五趣，不得至無上、正真之道。 要當專意未獲者獲，未得者得，未度者度，未得證者教令成證。</td>
+    <td id='p7'>7. “Monks then who always perform this training when accepting people’s faithful gifts are extraordinarily rare. Those who cannot digest their alms<sup id="ref3"><a href="#n3">3</a></sup> will fall to the five destinations and won’t attain the unsurpassed and true awakening. It’s imperative that they focus on obtaining what they’ve yet to obtain, attaining what they’ve yet to attain, crossing over what they’ve yet to cross, and accomplishing realization of those teachings that they’ve yet to realize.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561a4'>「是故，諸比丘，未有信施，不起想念。 以有信施，便能消化，不起染著。 如是，諸比丘，當作是學。」</td>
+    <td id='p8'>8. “Therefore, monks, a monk shouldn’t think about alms before they get the gifts of the faithful. Then, when they do get the faithful’s gifts, a monk can digest them without becoming defiled. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561a6'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p9'>9. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Of those who get forms that are large, none surpass the asura king. Monks, you should know, that asura’s form is 84,000 *yojana*s long, with a mouth that’s a thousand *yojana*s across.[\[1\]](#n1){:#ref1} Monks, you should know that there are times when the asura king wants to encroach on the sun. He doubles his body to 168,000 *yojana*s and moves in front of the sun and moon.
-{:#p2}
+<hr/>
 
-3\. “When they see him, the kings of the sun and moon both feel frightened and insecure in their own places. For what reason? Because the asura king has a terrible form, the kings of the sun and moon stop shining out of fear.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “But the asura king doesn’t dare grab the sun or moon. Why is that? The sun and moon are majestic, possess great miraculous powers, have very long life spans, are handsome in appearance, and enjoy pleasures without end. For those who want to know the length of their life spans: They live for one eon. Again, sentient beings who create good fortunes here become the kings of the sun and moon. They cannot be attacked by that asura, but the asura does make them feel distressed at that point, and then they disappear.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0560c06" target="_blank">T125.2.560c6-1a7</a>. I have not found a direct parallel for this <em>sūtra</em>, but the mythological story of an <em>asura</em> king who causes a solar eclipse was a common one in ancient India. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>yojana</em>. C. 由延 (MC. yiəu-yiɛn) or 由旬 (MC. yiəu-yiuĕn) = G. <em>yoyan[a]</em> = S/P. <em>yojana</em>. This was an Indian unit of distance equal to between five and nine miles. The ocean was assumed to be 84,000 <em>yojana</em>s deep and that Mount Sumeru rose another 84,000 <em>yojana</em>s above its surface. So, this <em>asura</em> king grew to the height of Indra’s palace at Sumeru’s summit while standing in the deepest part of the ocean. The sun and moon were considered to circle Sumeru at half the altitude of its summit, so he would have towered over them. Presumably, this was an ancient explanation for solar and lunar eclipses. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>digest</em>. C. 消化. While the C. here doesn’t specify the gifts are food, this verb is used throughout EĀ to mean digestion of food. It could also mean to extinguish a fire, and digestion was thought to occur as a result of an inner fire in other passages (cf. <a href="suttacentral.net/ea28.4" target="_blank">EĀ 28.4</a> at <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0652a24" target="_blank">T125.2.652a24</a>). So, there may be a double-meaning here between digestion and <em>nirvāṇa</em>, as they both involve meanings of extinguishment (one physical and one spiritual). [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. “In this way, monks, that deceitful Māra the Wicked One is forever after you, searching for a way to destroy your roots of goodness. The Wicked One conjures things with marvelous and unusual sights, sounds, odors, flavors, and touches, wanting to confuse the thinking of monks. The Wicked One thinks, ‘I’ll confront him and get an advantage over that monk’s eyes … get an advantage over that monk’s ears … nose … tongue … body … mind.’
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 7 February 2023</p>
 
-6\. “Although a monk sees these marvelous things of the six senses, his mind isn’t defiled by them. Deceitful Māra the Wicked One then feels distressed, retreats, and goes away. What’s the reason? It’s the work of the Tathāgata’s, the Arhat’s, majestic power. And why? Monks won’t go near sights, sounds, odors, flavors, and touches.
-{:#p6}
-
-7\. “Monks then who always perform this training when accepting people’s faithful gifts are extraordinarily rare. Those who cannot digest their alms[\[2\]](#n2){:#ref2} will fall to the five destinations and won’t attain the unsurpassed and true awakening. It’s imperative that they focus on obtaining what they’ve yet to obtain, attaining what they’ve yet to attain, crossing over what they’ve yet to cross, and accomplishing realization of those teachings that they’ve yet to realize.
-{:#p7}
-
-8\. “Therefore, monks, a monk shouldn’t think about alms before they get the gifts of the faithful. Then, when they do get the faithful’s gifts, a monk can digest them without becoming defiled. Thus, monks, you should train yourselves.”
-{:#p8}
-
-9\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p9}
-
----
-
-### Notes
-
-1. {:#n1} *yojana*. C. 由延 (MC. yiəu-yiɛn) or 由旬 (MC. yiəu-yiuĕn) = G. *yoyan[a]* = S/P. *yojana*. This was an Indian unit of distance equal to between five and nine miles. The ocean was assumed to be 84,000 *yojana*s deep and that Mount Sumeru rose another 84,000 *yojana*s above its surface. So, this asura king grew to the height of Indra’s palace at Sumeru’s summit while standing in the deepest part of the ocean. The sun and moon were considered to circle Sumeru at half the altitude of its summit, so he would have towered over them. Presumably, this was an ancient explanation for solar and lunar eclipses. [\[back\]](#ref1)
-2. {:#n2} *digest*. C. 消化. While the C. here doesn’t specify the gifts are food, this verb is used throughout EĀ to mean digestion of food. It could also mean to extinguish a fire, and digestion was thought to occur as a result of an inner fire in other passages (e.g., EĀ 28.4 at T125.2.652a24). So, there may be a double-meaning here between digestion and *nirvāṇa*, as they both involve meanings of extinguishment (one physical and one spiritual). [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 7 February 2023
-{: .revised}
-
----
+<hr/>
