--- a/01_agama/ekottarika/08/EA_08_02.md
+++ b/01_agama/ekottarika/08/EA_08_02.md
@@ -1,39 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 8. Asura | 2. Beneficial'
+title: 'The Numerical Discourses | Chapter 8: Asura | 2. Beneficial'
 type: kramdown
 base: ../../../
 previous: EA_08_01.html
 next: EA_08_03.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 8: Asura
-### 2. Beneficial
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 8: Asura</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(二) 益</th>
+  <th class='en'>2. Beneficial</th>
+  <tr>
+    <td class='ch' title='T125.2.561a8'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561a9'>爾時，世尊告諸比丘： 「若有一人出現於世，多饒益人，安隱眾生，愍世群萌，欲使天人獲其福祐。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人出現於世，多饒益人，安隱眾生，愍世群萌，欲使天人獲其福祐。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There’s one person who appears in the world to benefit many people and bring well-being to sentient beings out of compassion for the world’s multitudes and the desire for gods and humans to obtain their good fortunes. Who is that one person? He is called the Tathāgata, the Arhat, the Correctly and Perfectly Awakened One. He is known as the one person who appears in the world to benefit many people and bring well-being to sentient beings out of compassion for the world’s multitudes and the desire for gods and humans to obtain their good fortunes.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561a14'>「是故，諸比丘，常興恭敬於如來所。 是故，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, always pay respect to the Tathāgata. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561a15'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There’s one person who appears in the world to benefit many people and bring well-being to sentient beings out of compassion for the world’s multitudes and the desire for gods and humans to obtain their good fortunes. Who is that one person? He is called the Tathāgata, the Arhat, the Correctly and Perfectly Awakened One. He is known as the one person who appears in the world to benefit many people and bring well-being to sentient beings out of compassion for the world’s multitudes and the desire for gods and humans to obtain their good fortunes.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, always pay respect to the Tathāgata. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0561a08" target="_blank">T125.2.561a8-16</a>. This sūtra is parallel with <a href="https://suttacentral.net/an1.170" target="_blank">AN 1.170</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 7 February 2023</p>
 
-### Notes
-
-1. {:#n1} This sūtra is parallel with AN 1.170. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 7 February 2023
-{: .revised}
-
----
+<hr/>
