--- a/01_agama/ekottarika/08/EA_08_03.md
+++ b/01_agama/ekottarika/08/EA_08_03.md
@@ -1,40 +1,48 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 8. Asura | 3. The Single-Entry Path'
+title: 'The Numerical Discourses | Chapter 8: Asura | 3. The Single-File Path'
 type: kramdown
 base: ../../../
 previous: EA_08_02.html
 next: EA_08_04.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 8: Asura
-### 3. The Single-Entry Path
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 8: Asura</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(三) 一道</th>
+  <th class='en'>3. The Single-File Path</th>
+  <tr>
+    <td class='ch' title='T125.2.561a17'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561a18'>爾時，世尊告諸比丘： 「若有一人出現於世，便有一入道在於世間 ⋯亦有二諦⋯三解脫門⋯四諦真法⋯五根⋯六邪見滅⋯七覺意⋯賢聖八道品⋯九眾生居⋯如來十力⋯十一慈心解脫，便出現於世。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。是謂一人出現於世，便有一入道在於世間 ⋯亦有二諦⋯三解脫門⋯四諦真法⋯五根⋯六邪見滅⋯七覺意⋯賢聖八道品⋯九眾生居⋯如來十力⋯十一慈心解脫，便出現於世。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one person appears in the world, the single-entry path<sup id="ref2"><a href="#n2">2</a></sup> arises in the world. … the two truths … the three gateways to liberation … the true teaching of four truths … the five faculties … the cessation of six wrong views … the seven factors of awakening … the eightfold noble path … the nine abodes of sentient beings … the ten powers of the Tathāgata … the eleven liberations of kindnesss<sup id="ref3"><a href="#n3">3</a></sup> arise in the world. Who is that one person? He is called the Tathāgata, the Arhat, the Correctly and Perfectly Awakened One. He is known as the one person who appears in the world, and then the single-entry path arises in the world. … the two truths … the three gateways to liberation … the true teaching of four truths … the five faculties … the cessation of six wrong views … the seven factors of awakening … the eightfold noble path … the nine abodes of sentient beings … the ten powers of the Tathāgata … the eleven liberations of kindness arise in the world.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561a27'>「是故，諸比丘，常興恭敬於如來所。 亦當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, always pay respect to the Tathāgata. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561a28'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When one person appears in the world, the single-entry path[\[1\]](#n1){:#ref1} arises in the world. … the two truths … the three gateways to liberation … the true teaching of four truths … the five faculties … the cessation of six wrong views … the seven factors of awakening … the eightfold noble path … the nine abodes of sentient beings … the ten powers of the Tathāgata … the eleven liberations of kindness[\[2\]](#n2){:#ref2} arise in the world. Who is that one person? He is called the Tathāgata, the Arhat, the Correctly and Perfectly Awakened One. He is known as the one person who appears in the world, and then the single-entry path arises in the world. … the two truths … the three gateways to liberation … the true teaching of four truths … the five faculties … the cessation of six wrong views … the seven factors of awakening … the eightfold noble path … the nine abodes of sentient beings … the ten powers of the Tathāgata … the eleven liberations of kindness arise in the world.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, always pay respect to the Tathāgata. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0561a17" target="_blank">T125.2.561a17-29</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>single-entry path</em>. C. 一入道, P. <em>ekāyana magga</em>. Lit. “one-entry path.” In S. this term appears to mean a narrow path that allows only one person to walk at a time (Edgerton, 154). Pali interpreters seem to prefer “one-way path.” Cf. the notes to <a href="../12/EA_12_1.html" target="_blank">EĀ 12.1</a> for more indepth comments about this term. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>eleven liberations of kindness</em>. Cf. <a href="https://suttacentral.net/an8.1" target="_blank">AN 8.1</a>, <a href="https://suttacentral.net/an11.15" target="_blank">AN 11.15</a>, <a href="https://suttacentral.net/ea49.10" target="_blank">EĀ 49.10</a>, and <a href="https://suttacentral.net/t138" target="_blank">T138</a>. The “eleven liberations” must refer to the eleven rewards of developing kindness given in these parallels. [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 7 February 2023</p>
 
-### Notes
-
-1. {:#n1} *single-entry path*. C. 一入道, P. *ekāyana magga*. Lit. “one-entry path.” In S. this term appears to mean a narrow path that allows only one person to walk at a time (Edgerton, 154). Pali interpreters seem to prefer “one-way path.” Cf. the notes to <a href="../12/EA_12_1.html" target="_blank">EĀ 12.1</a> for more indepth comments about this term. [\[back\]](#ref1)
-2. {:#n2} *eleven liberations of kindness*. Cf. AN 8.1, AN 11.15, EĀ 49.10, and T138. The “eleven liberations” must refer to the eleven rewards of developing kindness given in these parallels. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 7 February 2023
-{: .revised}
-
----
+<hr/>
