--- a/01_agama/ekottarika/08/EA_08_07.md
+++ b/01_agama/ekottarika/08/EA_08_07.md
@@ -1,39 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 8. Asura | 7. Disappearance'
+title: 'The Numerical Discourses | Chapter 8: Asura | 7. Disappearance'
 type: kramdown
 base: ../../../
 previous: EA_08_06.html
 next: EA_08_08.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 8: Asura
-### 7. Disappearance
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 8: Asura</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(七) 沒盡</th>
+  <th class='en'>7. Disappearance</th>
+  <tr>
+    <td class='ch' title='T125.2.561b26'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561b27'>爾時，世尊告諸比丘： 「若有一人沒盡於世，人民之類多懷愁憂。 天及人民普失廕覆。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人沒盡於世，人民之類多懷愁憂。 天及人民普失廕覆。 所以然者？ 若多薩阿竭於世滅盡，三十七品亦復滅盡。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks: “There’s one person whose disappearance from the world makes all sorts of people feel anguished. Gods and humans everywhere are lost in darkness then. Who is that one person? He is called the Tathāgata, the Arhat, and the Correctly and Perfectly Awakened One. He is known as the one person whose disappearance from the world makes all sorts of people feel anguished. Gods and humans everywhere are lost in darkness then. Why is that? When the Tathāgata disappears from the world, the thirty-seven factors of the path disappear.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561c3'>「是故，諸比丘，常當恭敬於佛。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, always pay respect to the Buddha. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561c5'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks: “There’s one person whose disappearance from the world makes all sorts of people feel anguished. Gods and humans everywhere are lost in darkness then. Who is that one person? He is called the Tathāgata, the Arhat, and the Correctly and Perfectly Awakened One. He is known as the one person whose disappearance from the world makes all sorts of people feel anguished. Gods and humans everywhere are lost in darkness then. Why is that? When the Tathāgata disappears from the world, the thirty-seven factors of the path disappear.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, always pay respect to the Buddha. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0561b26" target="_blank">T125.2.561b26-c5</a>. This <em>sūtra</em> is similar to <a href="https://www.suttacentral.net/an1.173" target="_blank">AN 1.173</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 15 February 2023</p>
 
-### Notes
-
-1. {:#n1} This sūtra is similar to [AN 1.173](https://www.suttacentral.net/an1.173){:target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 15 February 2023
-{: .revised}
-
----
+<hr/>
