--- a/01_agama/ekottarika/08/EA_08_08.md
+++ b/01_agama/ekottarika/08/EA_08_08.md
@@ -1,33 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 8. Asura | 8. Belief'
+title: 'The Numerical Discourses | Chapter 8: Asura | 8. Belief'
 type: kramdown
 base: ../../../
 previous: EA_08_07.html
 next: EA_08_09.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 8: Asura
-### 8. Belief
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 8: Asura</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(八) 信</th>
+  <th class='en'>8. Belief</th>
+  <tr>
+    <td class='ch' title='T125.2.561c6'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561c7'>爾時，世尊告諸比丘： 「若有一人出現於世，爾時天及人民便蒙光澤，便有信心於戒、聞、施、智慧。 猶如秋時月光盛滿而無塵穢，普有所照。 此亦如是。 若多薩阿竭、阿羅呵、三耶三佛出現世間，天及人民便蒙光澤，有信心於戒、聞、施、智慧。 如月盛滿普照一切。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one person who appears in the world, a light then shines on both gods and humans, and then they believe in precepts, learning, generosity, and wisdom. It’s like the light of the autumn full moon that’s immaculate and illuminates everything. This is likewise. When the Tathāgata, Arhat, and Correctly and Perfectly Awakened One appears in the world and shines upon both gods and humans, then they believe in precepts, learning, generosity, and wisdom. He’s like the full moon illuminating everything.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561c12'>「是故，諸比丘，興恭敬心於如來所。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, be reverent in the presence of the Tathāgata. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561c14'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When one person who appears in the world, a light then shines on both gods and humans, and then they believe in precepts, learning, generosity, and wisdom. It’s like the light of the autumn full moon that’s immaculate and illuminates everything. This is likewise. When the Tathāgata, Arhat, and Correctly and Perfectly Awakened One appears in the world and shines upon both gods and humans, then they believe in precepts, learning, generosity, and wisdom. He’s like the full moon illuminating everything.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, be reverent in the presence of the Tathāgata. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0561c06" target="_blank">T125.2.561c6-15</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 15 February 2023</p>
 
-Translator: Charles Patton
-{: .translator}
-Last Revised: 15 February 2023
-{: .revised}
-
----
+<hr/>
