--- a/01_agama/ekottarika/08/EA_08_04.md
+++ b/01_agama/ekottarika/08/EA_08_04.md
@@ -1,39 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 8. Asura | 4. The Light'
+title: 'The Numerical Discourses | Chapter 8: Asura | 4. The Light'
 type: kramdown
 base: ../../../
 previous: EA_08_03.html
 next: EA_08_05.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 8: Asura
-### 4. The Light
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 8: Asura</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(四) 光明</th>
+  <th class='en'>4. The Light</th>
+  <tr>
+    <td class='ch' title='T125.2.561b1'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561b2'>爾時，世尊告諸比丘： 「若有一人出現於世，便有智慧光明出現於世。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人出現於世，便有智慧光明出現於世。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one person appears in the world, then the light of wisdom appears in the world. Who is that one person? He is called the Tathāgata, the Arhat, the Correctly and Perfectly Awakened One. He is known as the one person who appears in the world, and then the light of wisdom appears in the world.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561b5'>「是故，諸比丘，當信心向佛無有傾邪。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, you should have faith in the Buddha and not deviate from it. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561b7'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When one person appears in the world, then the light of wisdom appears in the world. Who is that one person? He is called the Tathāgata, the Arhat, the Correctly and Perfectly Awakened One. He is known as the one person who appears in the world, and then the light of wisdom appears in the world.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, you should have faith in the Buddha and not deviate from it. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0561b01" target="_blank">T125.2.561b1-8</a>. This sūtra is similar to <a href="https://suttacentral.net/an1.176" target="_blank">AN 1.176-177</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 7 February 2023</p>
 
-### Notes
-
-1. {:#n1} This sūtra is similar to AN 1.176-177. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 7 February 2023
-{: .revised}
-
----
+<hr/>
