--- a/01_agama/ekottarika/08/EA_08_05.md
+++ b/01_agama/ekottarika/08/EA_08_05.md
@@ -1,33 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 8. Asura | 5. The Darkness'
+title: 'The Numerical Discourses | Chapter 8: Asura | 5. The Darkness'
 type: kramdown
 base: ../../../
 previous: EA_08_04.html
 next: EA_08_06.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 8: Asura
-### 5. The Darkness
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 8: Asura</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(五) 闇冥</th>
+  <th class='en'>5. The Darkness</th>
+  <tr>
+    <td class='ch' title='T125.2.561b9'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561b10'>爾時世尊告諸比丘： 「若有一人出現於世，無明大冥便自消滅。 爾時，凡愚之士爲此無明所見纒結。 生死所趣如實不知，周旋往來今世後世。 從劫至劫無有解已，若多薩阿竭、阿羅呵、三耶三佛出現世時，無明大闇便自消滅。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There’s one person who appears in the world and destroys the great darkness of ignorance himself. At the time, ordinary deluded men are bound up by this ignorance. They don’t truly know the destinations of birth and death, and they cycle through present and later lives. Having gone from eon to eon without understanding, the Tathāgata, the Arhat, and the Correctly and Perfectly Awakened One appears in the world and destroys the great darkness of ignorance himself.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561b15'>「是故，諸比丘，當念承事諸佛。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, always be mindful and obey the Tathāgata. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561b16'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There’s one person who appears in the world and destroys the great darkness of ignorance himself. At the time, ordinary deluded men are bound up by this ignorance. They don’t truly know the destinations of birth and death, and they cycle through present and later lives. Having gone from eon to eon without understanding, the Tathāgata, the Arhat, and the Correctly and Perfectly Awakened One appears in the world and destroys the great darkness of ignorance himself.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, always be mindful and obey the Tathāgata. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0561b09" target="_blank">T125.2.561b9-17</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 7 February 2023</p>
 
-Translator: Charles Patton
-{: .translator}
-Last Revised: 7 February 2023
-{: .revised}
-
----
+<hr/>
