--- a/01_agama/ekottarika/08/EA_08_06.md
+++ b/01_agama/ekottarika/08/EA_08_06.md
@@ -1,41 +1,49 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 8. Asura | 6. The Factors of the Path'
+title: 'The Numerical Discourses | Chapter 8: Asura | 6. The Factors of the Path'
 type: kramdown
 base: ../../../
 previous: EA_08_05.html
 next: EA_08_07.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 8: Asura
-### 6. The Factors of the Path
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 8: Asura</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(六) 道品</th>
+  <th class='en'>6. The Factors of the Path</th>
+  <tr>
+    <td class='ch' title='T125.2.561b18'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561b19'>爾時，世尊告諸比丘： 「若有一人出現於世，便有三十七品出現於世。 云何三十七品道？ 所謂四意止、四意斷、四神足、五根、五力、七覺意、八真行，便出現於世。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks: “When one person appears in the world, the thirty-seven factors of the path appear in the world. What are the thirty-seven factors of the path? It’s the four abodes of mindfulness,<sup id="ref2"><a href="#n2">2</a></sup> four mental abandonments,<sup id="ref3"><a href="#n3">3</a></sup> four spiritual abilities, five faculties, five powers, seven factors of awakening,and eight true practices<sup id="ref4"><a href="#n4">4</a></sup> that then appear in the world. Who is that one person? He is called the Tathāgata, the Arhat, and the Correctly and Perfectly Awakened One.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561b23'>「是故，諸比丘，常當承事於佛。 亦當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, always obey the Buddha. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561b24'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks: “When one person appears in the world, the thirty-seven factors of the path appear in the world. What are the thirty-seven factors of the path? It’s the four abodes of mindfulness,[\[1\]](#n1){:#ref1} four mental abandonments,[\[2\]](#n2){:#ref2} four spiritual abilities, five faculties, five powers, seven factors of awakening,and eight true practices[\[3\]](#n3){:#ref3} that then appear in the world. Who is that one person? He is called the Tathāgata, the Arhat, and the Correctly and Perfectly Awakened One.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, always obey the Buddha. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0561b18" target="_blank">T125.2.561b18-25</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>four abodes of mindfulness</em>. C. 四意止, G. <em>cadu spaduvaṭ́hana</em>, S. <em>catvāri smṛty-upasthānāni</em>, P. <em>cattāro satipaṭṭhāna</em>. This is an older C. translation that lit. means four “mental calmings,” or perhaps “mental stops.” [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>four mental abandonments</em>. C. 四意斷, S. <em>catvāri samyakprahāṇāni</em>, P. <em>cattāro sammappadhāna</em>. It would appear that a phonetic change of S. <em>pradhāna</em> (P. <em>padhāna</em>) resulted in the equiv. of S. <em>prahāṇa</em> (G. <em>prahana</em>) being adopted in many Buddhist texts. As a result, early C. translations often interpreted “four right efforts” as “four right abandonments,” as this was the literal meaning of S. <em>prahāṇa</em>. Here, the term 意 has been added by the C. translator to convey the psychological nature of the concept, which involves avoiding bad things and nurturing good ones that arise in one’s mind. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>eight true practices</em>. C. 八真行. This may be an alterate epithet for the eightfold path, perhaps equiv. to S. <em>aṣṭa sucaritāni</em>. <em>Sucarita</em> (“practiced well”) was often translated to C. as “wonderful conduct” (妙行), so it’s conceivable that 真行 could translate this term, too. Elsewhere in EĀ, the noble eightfold path is translated as we would expect (C. 賢聖八品道). [<a href="#ref4">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 15 February 2023</p>
 
-### Notes
-
-1. {:#n1} *four abodes of mindfulness*. C. 四意止, G. *cadu spaduvaṭ́hana*, S. *catvāri smṛty-upasthānāni*, P. *cattāro satipaṭṭhāna*. This is an older C. translation that lit. means four “mental calmings,” or perhaps “mental stops.” [\[back\]](#ref1)
-2. {:#n2} *four mental abandonments*. C. 四意斷, S. *catvāri samyakprahāṇāni*, P. *cattāro sammappadhāna*. It would appear that a phonetic change of S. *pradhāna* (P. *padhāna*) resulted in the equiv. of S. *prahāṇa* (G. *prahana*) being adopted in many Buddhist texts. As a result, early C. translations often interpreted “four right efforts” as “four right abandonments,” as this was the literal meaning of S. *prahāṇa*. Here, the term 意 has been added by the C. translator to convey the psychological nature of the concept, which involves avoiding bad things and nurturing good ones that arise in one’s mind. [\[back\]](#ref2)
-3. {:#n3} *eight true practices*. C. 八眞行. This may be an alterate epithet for the eightfold path, perhaps equiv. to S. *aṣṭa sucaritāni*. *Sucarita* (“practiced well”) was often translated to C. as “wonderful conduct” (妙行), so it’s conceivable that 眞行 could translate this term, too. Elsewhere in EĀ, the noble eightfold path is translated as we would expect (C. 賢聖八品道). [\[back\]](#ref3)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 15 February 2023
-{: .revised}
-
----
+<hr/>
