--- a/01_agama/ekottarika/08/EA_08_09.md
+++ b/01_agama/ekottarika/08/EA_08_09.md
@@ -1,33 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 8. Asura | 9. Flourishing'
+title: 'The Numerical Discourses | Chapter 8: Asura | 9. Flourishing'
 type: kramdown
 base: ../../../
 previous: EA_08_08.html
 next: EA_08_10.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 8: Asura
-### 9. Flourishing
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 8: Asura</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(九) 熾盛</th>
+  <th class='en'>9. Flourishing</th>
+  <tr>
+    <td class='ch' title='T125.2.561c16'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561c17'>爾時世尊告諸比丘： 「若有一人出現於世，爾時天及人民皆悉熾盛，三惡眾生便自減少。 猶如國界聖王治化時。 彼城中人民熾盛，隣國力弱。 此亦如是。 若多薩阿竭出現世時⋯三惡趣道便自減少。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one person appears in the world, gods and humans all flourish during that time, and the sentient beings in the three bad destinies dwindle in number. It’s just as when a noble [wheel-turning] king rules the world. The people in his capitol flourish, and neighboring countries weaken. This is likewise. When the Tathāgata, Arhat, and Correctly and Perfectly Awakened One appears in the world, [gods and humans all flourish, and] the sentient beings in the three evil destinies dwindle in number.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561c21'>「如是，諸比丘，當信向佛。 是故，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, you should believe in the Buddha. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561c22'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When one person appears in the world, gods and humans all flourish during that time, and the sentient beings in the three bad destinies dwindle in number. It’s just as when a noble [wheel-turning] king rules the world. The people in his capitol flourish, and neighboring countries weaken. This is likewise. When the Tathāgata, Arhat, and Correctly and Perfectly Awakened One appears in the world, [gods and humans all flourish, and] the sentient beings in the three evil destinies dwindle in number.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, you should believe in the Buddha. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0561c16" target="_blank">T125.2.561c16-23</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 15 February 2023</p>
 
-Translator: Charles Patton
-{: .translator}
-Last Revised: 15 February 2023
-{: .revised}
-
----
+<hr/>
