--- a/01_agama/ekottarika/08/EA_08_10.md
+++ b/01_agama/ekottarika/08/EA_08_10.md
@@ -1,46 +1,64 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 8. Asura | 10. Unmatched'
+title: 'The Numerical Discourses | Chapter 8: Asura | 10. Unmatched'
 type: kramdown
 base: ../../../
 previous: EA_08_09.html
 next: ../09/EA_09_01.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 8: Asura
-### 10. Unmatched
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 8: Asura</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一〇) 無與等</th>
+  <th class='en'>10. Unmatched</th>
+  <tr>
+    <td class='ch' title='T125.2.561c24'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.561c25'>爾時，世尊告諸比丘： 「若有一人出現於世，無與等者，不可摸則，獨歩無侶，無有儔匹。 諸天人民無能及者，信、戒、聞、施、智慧無能及者。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人出現於世，無與等者，不可摸則，獨歩無伴，無有儔匹。 諸天人民無能及者，信、戒、聞、施、智慧皆悉具足。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There’s one person who appears in the world who’s unmatched by others, who can’t be imitated, who walks alone without a companion, and who has no peer. None among gods and humans can compare to him, nor does their belief, precepts, learning, generosity, or wisdom compare to his. Who is that one person? He’s called be the Tathāgata, Arhat, and Correctly and Perfectly Awakened One. He is known as the one person who appears in the world who’s unmatched by others, who can’t be imitated, who walks alone without a companion, and who has no peer. None among gods and humans can compare to him, for his belief, precepts, learning, generosity, and wisdom are all complete.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562a2'>「是故，諸比丘，當信敬於佛。 如是，諸比丘，當作是學。」</td>
+    <td id='p3'>3. “Therefore, monks, you should pay respect to the Buddha. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.562a3'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td class='ch' title='t125.2.562a5'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='T125.2.562a5'><ul class='verse'>
+    <li class='ch'>須倫、益、一道、<br/>
+    光明、及闇冥、<br/>
+    道品、沒盡、信、<br/>
+    熾盛、無與等。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>[1] Asura, [2] beneficial, [3] single-file path,<br/>
+    [4] Light, [5] darkness,<br/>
+    [6] Factors of the path, [7] disappearance, [8] belief,<br/>
+    [9] Flourishing, and [10] unmatched.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There’s one person who appears in the world who’s unmatched by others, who can’t be imitated, who walks alone without a companion, and who has no peer. None among gods and humans can compare to him, nor does their belief, precepts, learning, generosity, or wisdom compare to his. Who is that one person? He’s called be the Tathāgata, Arhat, and Correctly and Perfectly Awakened One. He is known as the one person who appears in the world who’s unmatched by others, who can’t be imitated, who walks alone without a companion, and who has no peer. None among gods and humans can compare to him, for his belief, precepts, learning, generosity, and wisdom are all complete.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, you should pay respect to the Buddha. Thus, monks, you should train yourselves.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0561c24" target="_blank">T125.2.561c24-2a6</a>. This <em>sūtra</em> is similar to <a href="https://www.suttacentral.net/an1.174" target="_blank">AN 1.174</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-##### Summary Verse
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 15 February 2023</p>
 
-* {:.verse}Asura, beneficial, single-file path,\\
-Light, darkness,\\
-Factors of the path, disappearance, belief,\\
-Flourishing, and unmatched.
-
----
-
-### Notes
-
-1. {:#n1} This sūtra is similar to [AN 1.174](https://www.suttacentral.net/an1.174){:target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 15 February 2023
-{: .revised}
-
----
+<hr/>
